Bump version to 2026.11.5